UtahLiveDataTest/src/objects/Award__c.object
<CustomObject>
    <fields>
        <fullName>DeptHasEstablishedIndirectCostRate__c</fullName>
        <label>Dept. has established Indirect Cost Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DirectAmount__c</fullName>
        <label>Direct Amount</label>
        <summarizedField>AwardServiceArea__c.DirectAmount__c</summarizedField>
        <summaryForeignKey>AwardServiceArea__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DisplayEditButton__c</fullName>
        <formula>AND(
  OR(
    AND(
      NOT(ISPICKVAL(Status__c, &apos;Drafted&apos;))
    ),
    AND(
      $User.Id != GrantMonitor__c,
      $User.Id != ProgramManager__c,
      $User.Id != ProjectOfficer__c,
      $User.Id != DataEvaluator__c,
      $User.Id != GrantSupervisor__c,
      $User.Id != BureauChief__c
    ),
    AND(
      NOT(ISPICKVAL(AwardType__c, &apos;New&apos;)),
      NOT(ISPICKVAL(AwardType__c, &apos;Continuation&apos;)),
      NOT(CONTAINS(Amendments__c, &apos;Award Increase/Decrease&apos;)),
      NOT(CONTAINS(Amendments__c, &apos;Cost-Extension&apos;))
    )
  ),
  OR( 
    NOT(ISPICKVAL(Status__c, &apos;Accepted by Sub-Awardee&apos;)), 
    $User.Id != GrantSupervisor__c 
  ),
  OR( 
    NOT(ISPICKVAL(Status__c, &apos;Sub-Awardee Review&apos;)), 
    $User.Id != SubAwardee__c 
  ),
  OR(
    NOT(ISPICKVAL(Status__c, &apos;Approved by OD&apos;)), 
    $Profile.Name != &apos;Executive User&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <description>Document Number is a code used for fiscal administration of grant obligations in the Payment Management System. There are various formats for representing the document number.</description>
        <label>Document Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <inlineHelpText>Organization EIN.</inlineHelpText>
        <label>EIN</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EINumber__c</fullName>
        <formula>( Application__r.ExternalOrganization__r.EINText__c )</formula>
        <label>EIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutiveApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ExecutiveApprover</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AwardshKVL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalOrganization__c</fullName>
        <formula>Grant__r.ExternalOrganization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINETProgLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up on FINETProgram object for UOVC award letter.</description>
        <label>r_prog</label>
        <referenceTo>r_prog__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FOUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FO Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Placeholder value, used to trigger tasking during the award approval process.</description>
        <label>FO Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FederalAgency__c</fullName>
        <label>Federal Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalAssistanceType__c</fullName>
        <description>Benefits and services of the programs are provided through financial types non financial types of assistance.
Formula - Allocations of money to States or their subdivisions in accordance with distribution formulas prescribed by law or administrative regulation, for activities of a continuing nature not confined to a specific project.
Project/Competitive - The funding, for fixed or known periods, of specific projects. Project grants can include fellowships, scholarships, research grants, training grants, traineeships, experimental and demonstration grants, evaluation grants, planning grants, technical assistance grants, survey grants, and construction grants.
Other - If the grant does not fall into either Formula or Project.</description>
        <label>Federal Assistance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Project/Competitive</fullName>
                </value>
                <value>
                    <fullName>Formula and Competitive</fullName>
                </value>
                <value>
                    <fullName>Cooperative agreement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FederalGrantAwardIdFAIN__c</fullName>
        <inlineHelpText>This is Federal Award Identification Number.</inlineHelpText>
        <label>Federal Grant Award Id (FAIN)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederalRollup__c</fullName>
        <label>FederalRollup</label>
        <summarizedField>AwardBudgetCategory__c.Federal__c</summarizedField>
        <summaryForeignKey>AwardBudgetCategory__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Federal__c</fullName>
        <label>Federal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieldHistoryEntityName__c</fullName>
        <description>This field will show Entity Name in Field level history.</description>
        <formula>&apos;Award&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will show Entity Name in Field level history.</inlineHelpText>
        <label>Field History Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for validation of form depends upon percentage of form filled.</description>
        <label>Forms Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FundingAccountTotal__c</fullName>
        <label>Funding Account Total</label>
        <summarizedField>AwardFundingAccount__c.FinancialAssistanceAmount__c</summarizedField>
        <summaryForeignKey>AwardFundingAccount__c.Award__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GrantAdministrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantApplicationNull__c</fullName>
        <formula>IF(Grant__r.Application__c == null, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrantApplicationNull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrantAwardDescription__c</fullName>
        <inlineHelpText>Award Description</inlineHelpText>
        <label>Grant Award Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GrantAwardName__c</fullName>
        <label>Award Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantAwardStateShare__c</fullName>
        <description>This calculates State Share from obligated Amount</description>
        <formula>(StateShareAmount__c   *  TotalObligateAmount__c  )</formula>
        <inlineHelpText>Portion of the total project costs that are paid by sub-awardee</inlineHelpText>
        <label>Grantee Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantID__c</fullName>
        <formula>Grant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrantID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantMonitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Monitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards55</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantSupervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantType__c</fullName>
        <label>Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GranteeDetails__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Application</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipLabel>Awards</relationshipLabel>
        <relationshipName>Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteeOrgAddressFormula__c</fullName>
        <description>This field is used in NOGA form.</description>
        <formula>Grant__r.InternalOrganization__r.BillingStreet &amp; BR() 
&amp;Grant__r.ExternalOrganization__r.BillingCity&amp;&quot;,&quot;&amp;Grant__r.ExternalOrganization__r.BillingState&amp; BR() 
&amp;Grant__r.ExternalOrganization__r.BillingCountry&amp;&quot;-&quot;&amp;Grant__r.ExternalOrganization__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Org Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GranteeOrgAddress__c</fullName>
        <formula>GranteeDetails__r.OrganizationAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Organization Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GranteeOrganization__c</fullName>
        <description>This field is used in NOGA form.</description>
        <formula>Grant__r.InternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GranteePOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grantee POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteeProgramincome__c</fullName>
        <label>GranteeProgramincome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrantorAdmin__c</fullName>
        <description>This field is NOGA Award Cover Letter</description>
        <formula>Grant__r.GrantsContact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantor Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantorOrganizationAddress__c</fullName>
        <description>This field is used in NOGA form</description>
        <formula>Grant__r.ExternalOrganization__r.BillingStreet &amp; BR() 
&amp;Grant__r.ExternalOrganization__r.BillingCity&amp;&quot;,&quot;&amp;Grant__r.ExternalOrganization__r.BillingState&amp; BR() 
&amp;Grant__r.ExternalOrganization__r.BillingCountry&amp;&quot;-&quot;&amp;Grant__r.ExternalOrganization__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantor Organization Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantorOrganization__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.Name</formula>
        <label>Grantor Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantsContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grants Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Awards1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantsManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantsManager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AwardshKVV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasAdjustments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasApproval__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Has Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HaveYouAcceptedTheAward__c</fullName>
        <label>Have you accepted the Award?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HideAddRole__c</fullName>
        <formula>OR(
  AND(
    NOT(ISPICKVAL(Status__c, &apos;Drafted&apos;)),
    NOT(ISPICKVAL(Status__c, &apos;Issued&apos;)),
    NOT(ISPICKVAL(Status__c, &apos;Issued(Inactive)&apos;))
  ),
  ProgramManager__c != $User.Id
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Add Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAdjustmentGrid__c</fullName>
        <formula>AND(IF(OR(ISPICKVAL( AmendmentStatus__c, &apos;Budget Change In Progress&apos;),ISPICKVAL( AmendmentStatus__c, &apos;Cost Extension In Progress&apos;)), false, true),  NOT(HasAdjustments__c))</formula>
        <label>Hide Adjustment Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAllocatedAmount__c</fullName>
        <formula>IF(
OR(
CurrentRevisionStatus__c = &apos;Not Started&apos;, 
CurrentRevisionStatus__c = &apos;Active&apos;, 
CurrentRevisionStatus__c = null,  
TEXT(BudgetRevisionInitiatedByUSBE__c) != &apos;Allocation Change&apos;, 
TEXT(Grant__r.Program__r.ProgramPathway__c) =&apos;State-Competitive&apos;, 
TEXT(Grant__r.Program__r.ProgramPathway__c)=&apos;Fed-Competitive&apos;)
, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAllocatedAmount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAmendedGMFields__c</fullName>
        <formula>IF(ISBLANK(AmendedRequisitionNumber__c), true, false)</formula>
        <label>Hide Amended GM Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAmendmentButton__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;),ISPICKVAL(Status__c,&apos;Approved&apos;),ISPICKVAL(Status__c,&apos;Sent to Grantee Review&apos;),ISPICKVAL(Status__c,&apos;Being Amended&apos;),
ISPICKVAL(Status__c,&apos;Amended/Closed&apos;),ISPICKVAL(Status__c,&apos;Grantee Accepted&apos;),ISPICKVAL(Status__c,&apos;Amended&apos;),ISPICKVAL(Status__c,&apos;Rejected&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAmendmentButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideApproveButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HideApproveButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAwardGrid2__c</fullName>
        <formula>IF(OR(NOT(GrantApplicationNull__c), GrantorOrganization__c == &apos;USBE&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAwardGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAwardGrid__c</fullName>
        <formula>IF(OR(GrantApplicationNull__c, GrantorOrganization__c == &apos;USBE&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAwardGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBasicGrid__c</fullName>
        <formula>Or(IF(OR(ISPICKVAL( AmendmentStatus__c, &apos;Budget Change In Progress&apos;),ISPICKVAL( AmendmentStatus__c, &apos;Cost Extension In Progress&apos;)), true, false), HasAdjustments__c)</formula>
        <label>Hide Basic Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetTableIfRevisionSubmittedCTE__c</fullName>
        <formula>IF(OR($User.ProfileName__c != &apos;System Administrator&apos;, GrantorOrganization__c != &apos;USBE&apos;, ProgramBudgetTypeUSBE__c != &apos;CTE&apos;, AND(TEXT(BudgetRevisionInitiated__c) != null, OR( TEXT(BudgetRevisionInitiated__c) = &apos;Not Started&apos;, TEXT(BudgetRevisionInitiated__c) = &apos;Submitted&apos;))), 
IF(OR(GrantorOrganization__c != &apos;USBE&apos;, ProgramBudgetTypeUSBE__c != &apos;CTE&apos;, CurrentUserIsGrantor__c = TRUE, AND(TEXT(BudgetRevisionInitiated__c) != null, OR( TEXT(BudgetRevisionInitiated__c) = &apos;Not Started&apos;, TEXT(BudgetRevisionInitiated__c) = &apos;Submitted&apos;))), TRUE, FALSE)
,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBudgetTableIfRevisionSubmittedCTE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetTableIfRevisionSubmitted__c</fullName>
        <formula>IF(OR($User.ProfileName__c != &apos;System Administrator&apos;, GrantorOrganization__c != &apos;USBE&apos;, ProgramBudgetTypeUSBE__c = &apos;CTE&apos;, AND(TEXT(BudgetRevisionInitiated__c) != null, OR( TEXT(BudgetRevisionInitiated__c) = &apos;Not Started&apos;, TEXT(BudgetRevisionInitiated__c) = &apos;Submitted&apos;))), 
IF(OR(GrantorOrganization__c != &apos;USBE&apos;, ProgramBudgetTypeUSBE__c = &apos;CTE&apos;, CurrentUserIsGrantor__c = TRUE, AND(TEXT(BudgetRevisionInitiated__c) != null, OR( TEXT(BudgetRevisionInitiated__c) = &apos;Not Started&apos;, TEXT(BudgetRevisionInitiated__c) = &apos;Submitted&apos;))), TRUE, FALSE)
,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBudgetTableIfRevisionSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetTableNotUSBECTE__c</fullName>
        <formula>IF(OR($User.ProfileName__c != &apos;System Administrator&apos;, ProgramBudgetTypeUSBE__c != &apos;CTE&apos;, GrantorOrganization__c != &apos;USBE&apos;, AND(TEXT(BudgetRevisionInitiated__c) != null, TEXT(BudgetRevisionInitiated__c) = &apos;In Progress&apos;)),
IF(OR(CurrentUserIsGrantor__c = FALSE, ProgramBudgetTypeUSBE__c != &apos;CTE&apos;),
IF(OR(GrantorOrganization__c != &apos;USBE&apos;, ProgramBudgetTypeUSBE__c != &apos;CTE&apos;, AND(TEXT(BudgetRevisionInitiated__c) != null, TEXT(BudgetRevisionInitiated__c) = &apos;In Progress&apos;)), TRUE, FALSE)
,FALSE)
,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBudgetTableNotUSBECTE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetTableUSBE__c</fullName>
        <formula>IF(OR($User.ProfileName__c != &apos;System Administrator&apos;, GrantorOrganization__c != &apos;USBE&apos;, ProgramBudgetTypeUSBE__c = &apos;CTE&apos;, AND(TEXT(BudgetRevisionInitiated__c) != null, TEXT(BudgetRevisionInitiated__c) = &apos;In Progress&apos;)),
IF(OR(CurrentUserIsGrantor__c = FALSE, ProgramBudgetTypeUSBE__c = &apos;CTE&apos;),
IF(OR(GrantorOrganization__c != &apos;USBE&apos;, ProgramBudgetTypeUSBE__c = &apos;CTE&apos;, AND(TEXT(BudgetRevisionInitiated__c) != null, TEXT(BudgetRevisionInitiated__c) = &apos;In Progress&apos;)), TRUE, FALSE)
,FALSE)
,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBudgetTableUSBE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBuildupGrid__c</fullName>
        <description>Hide Buildup Grid Logic</description>
        <formula>AND(RecordType.Name=&apos;Grantee&apos;,Text(IndirectCostRateDecision__c)=&apos;Explicit&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hide Buildup Grid Logic</inlineHelpText>
        <label>Hide Buildup Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideCodingBlock__c</fullName>
        <formula>OR(TEXT(Status__c) != &apos;Submitted for Approval&apos;, AND(Text(Grant__r.Program__r.ProgramPathway__c) != &apos;State-Competitive&apos;, Text(Grant__r.Program__r.ProgramPathway__c) != &apos;Fed-Competitive&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideCodingBlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeclineButton__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c,&apos;Sent to Grantee Review&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideDeclineButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDelete__c</fullName>
        <formula>OR(
  NOT(
    ISPICKVAL(
      Status__c, &apos;Drafted&apos;
    )
  ), 
  $User.Id != ProgramManager__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditAward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HideEditAward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>Logic for Hiding Edit Button</description>
        <formula>OR(AND(RecordType.DeveloperName =&apos;Grantor&apos;,NOT(ISPICKVAL(Status__c , &apos;Created&apos;))),
   AND(RecordType.DeveloperName =&apos;Grantee&apos;,NOT(ISPICKVAL(Status__c , &apos;Created&apos;)))
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding Edit Button</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEdit__c</fullName>
        <formula>AND(
  OR(
    AND(
      NOT(ISPICKVAL(Status__c, &apos;Drafted&apos;))
    ),
    AND(
      $User.Id != GrantMonitor__c,
      $User.Id != ProgramManager__c,
      $User.Id != ProjectOfficer__c,
      $User.Id != DataEvaluator__c,
      $User.Id != GrantSupervisor__c,
      $User.Id != BureauChief__c
    ),
    AND(
      NOT(ISPICKVAL(AwardType__c, &apos;New&apos;)),
      NOT(ISPICKVAL(AwardType__c, &apos;Continuation&apos;)),
      NOT(CONTAINS(Amendments__c, &apos;Award Increase/Decrease&apos;)),
      NOT(CONTAINS(Amendments__c, &apos;Cost-Extension&apos;))
    )
  ),
  OR( 
    NOT(ISPICKVAL(Status__c, &apos;Accepted by Sub-Awardee&apos;)), 
    $User.Id != GrantSupervisor__c 
  ),
  OR( 
    NOT(ISPICKVAL(Status__c, &apos;Sub-Awardee Review&apos;)), 
    $User.Id != SubAwardee__c 
  ),
  OR(
    NOT(ISPICKVAL(Status__c, &apos;Approved by OD&apos;)), 
    $Profile.Name != &apos;Executive User&apos;,
    AND(
      NOT(CONTAINS(Amendments__c,&apos;Cost-Extension&apos;)),
      NOT(CONTAINS(Amendments__c,&apos;Award Increase/Decrease&apos;)),
      NOT(ISBLANK(Amendments__c))
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideForPAUOVC__c</fullName>
        <formula>POUser__c = $User.Id  &amp;&amp; Grant__r.ExternalOrganization__r.Name=&apos;UOVC&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideForPAUOVC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideForUsersExceptOwner__c</fullName>
        <formula>IF(Grant__r.OwnerId ==  $User.Id,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideForUsersExceptOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFundingOptions__c</fullName>
        <formula>OR(
  GrantMonitor__c != $User.Id,
  NOT(ISPICKVAL(Status__c, &apos;Grant Monitor Review&apos;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Funding Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideGranteeAmendmentRequesttab__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;),ISPICKVAL(Status__c,&apos;Approved&apos;))</formula>
        <label>Hide Grantee Amendment Request tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfGrantorOrgNotUSBE__c</fullName>
        <formula>IF(GrantorOrganization__c != &apos;USBE&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfGrantorOrgNotUSBE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfRevisionInitiated__c</fullName>
        <formula>IF(OR(GrantorOrganization__c != &apos;USBE&apos;, AND(TEXT(BudgetRevisionInitiated__c) != null, OR( TEXT(BudgetRevisionInitiated__c) = &apos;In Progress&apos;, TEXT(BudgetRevisionInitiated__c) = &apos;Submitted&apos;))), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfRevisionInitiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfRevisionSubmitted__c</fullName>
        <formula>IF(OR(GrantorOrganization__c != &apos;USBE&apos;, AND(TEXT(BudgetRevisionInitiated__c) != null, OR( TEXT(BudgetRevisionInitiated__c) = &apos;Not Started&apos;, TEXT(BudgetRevisionInitiated__c) = &apos;Submitted&apos;))), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfRevisionSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideInitiateAmendment__c</fullName>
        <formula>OR(
  NOT(CONTAINS(TEXT(Status__c), &apos;Issued&apos;)),
  AND(
    $User.Id != ProjectOfficer__c, 
    $User.Id != GrantMonitor__c, 
    $User.Id != ProgramManager__c, 
    $User.Id != SubAwardee__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Initiate Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIssue__c</fullName>
        <formula>AND(
  OR(
    HasApproval__c,
    NOT(ISPICKVAL(Status__c, &apos;Drafted&apos;)),
    $User.Id != ProgramManager__c
  ),
  OR(
    NOT(ISPICKVAL(Status__c, &apos;Approved by OD&apos;)),
    ISBLANK(PurchaseOrderNumber__c),
    $Profile.Name != &apos;Executive User&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewBtn__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Approved&apos;))
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide New Buttons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewGoalBtn__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;),ISPICKVAL(Status__c,&apos;Approved&apos;),ISPICKVAL(Status__c,&apos;Sent to Grantee Review&apos;),ISPICKVAL(Status__c,&apos;Being Amended&apos;),
ISPICKVAL(Status__c,&apos;Amended/Closed&apos;),ISPICKVAL(Status__c,&apos;Grantee Accepted&apos;),ISPICKVAL(Status__c,&apos;Amended&apos;),ISPICKVAL(Status__c,&apos;Rejected&apos;),ISPICKVAL(Status__c,&apos;Activated&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide New Goal Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewGoal__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c , &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideNewGoal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewGridBtn__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Status__c,&apos;Created&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide New Grid Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewReviewBtn__c</fullName>
        <description>Logic for Hiding New Review Button</description>
        <formula>NOT(ISPICKVAL(Status__c , &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding New Review Button</inlineHelpText>
        <label>Hide New Review Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideRequestAdvance__c</fullName>
        <formula>Text(Status__c) != &apos;Activated&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Request Advance</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>